# webapp_amazons

./: .dockerignore  .env.example  .flaskenv  .flaskenv.example  .gitignore  Dockerfile  README.md  amazons.conf  docker-compose.dev.yml  docker-compose.yml  install.sh  nginx_amazons.conf  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: aws.yml
amazons/: Dockerfile  Dockerfile.dev  __init__.py  app.db  config.py  forms.py  models.py  requirements.txt  routes.py  run.py  setup.py
amazons/app/: __init__.py  config.py  forms.py  models.py  routes.py
amazons/app/static/js/: single.js  sketch.js
amazons/app/templates/: base.html  onscreen.html  singleplayer.html
amazons/script/: entrypoint.dev.sh  entrypoint.sh
amazons/static/js/: onscreen.js  sketch.js
amazons/templates/: base.html  dashboard.html  game.html  index.html  login.html  register.html
migrations/: README
migrations/versions/: 291b2b9c3775_init.py  781893fa68ae_games_table.py  8f3c13bb2cad_.py  97e5deda8f7c_games_table.py  d2d0236b915b_init.py  d759023e6bf9_init.py
postgresql/: Dockerfile
postgresql/docker-entrypoint-initdb.d/: 01_create_db_and_user.sql
src/amazons/: app.py  util.py
src/amazons/static/: goa.css
src/amazons/static/js/: sketch.js
src/amazons/templates/: base.html  game.html  index.html  readcookie.html
tests/: test_app.py
